--- a/Pathe/inc/Pathe_admin.master
+++ b/Pathe/inc/Pathe_admin.master
@@ -96,8 +96,7 @@
                     <li class="dropdown navbar-right">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><asp:LoginName ID="LoginNameMenu" runat="server" /><span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a>Stuff</a></li>
-                        <li><a>Things</a></li>
+                        <li><a href="/Logout">Log uit</a></li>
                     </ul>
                     </li>
                  
