--- a/Pathe/inc/Pathe_user.Master
+++ b/Pathe/inc/Pathe_user.Master
@@ -59,63 +59,26 @@
                       <RoleGroups>
                           <asp:RoleGroup Roles="GlobalAdmin,UserAdmin,BlogAdmin,FilmAdmin">
                               <ContentTemplate>
-                                  <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Admin<span class="caret"></span></a>
-                                      <ul class="dropdown-menu" role="menu">
-                                          <li><a href="/Admin">Dashboard</a></li>
+                                <li><a href="/Admin">Admin Dashboard</a></li>
                               </ContentTemplate>
                           </asp:RoleGroup>
                         </RoleGroups>
                   </asp:LoginView>
-              <asp:LoginView ID="AdminMenuViewContent" runat="server">
-                      <RoleGroups>
-                          <asp:RoleGroup Roles="GlobalAdmin">
-                              <ContentTemplate>
-                                  <li><a href="/Admin/Staff">Medewerkers</a></li>
-                                  <li><a href="/Admin/Blog">Blog</a></li>
-                                  <li><a href="/Admin/Films">Films</a></li>
-                                  <li><a href="/Admin/Cinema">Bioscopen</a></li>
-                                  <li><a href="/Admin/Agenda">Bioscoopagenda</a></li>
-                                  <li><a href="/Admin/Users">Gebruikers</a></li>
-                              </ContentTemplate>
-                          </asp:RoleGroup>
-                          <asp:RoleGroup Roles="BlogAdmin,GlobalAdmin">
-                              <ContentTemplate>
-                                  <li><a href="/Admin/Blog">Blog</a></li>
-                              </ContentTemplate>
-                          </asp:RoleGroup>
-                          <asp:RoleGroup Roles="FilmAdmin,GlobalAdmin">
-                              <ContentTemplate>
-                                <li><a href="/Admin/Films">Films</a></li>
-                                <li><a href="/Admin/Cinema">Bioscopen</a></li>
-                                <li><a href="/Admin/Agenda">Bioscoopagenda</a></li>
-                              </ContentTemplate>
-                          </asp:RoleGroup>
-                          <asp:RoleGroup Roles="UserAdmin,GlobalAdmin">
-                              <ContentTemplate>
-                                <li class="dropdown">
-                                 <li><a href="/Admin/Users">Gebruikers</a></li>
-                              </ContentTemplate>
-                          </asp:RoleGroup>
-                          </RoleGroups>
-                  </asp:LoginView>
-               <asp:LoginView ID="AdminMenuViewFooter" runat="server">
-                      <RoleGroups>
-                          <asp:RoleGroup Roles="GlobalAdmin,UserAdmin,BlogAdmin,FilmAdmin">
-                              <ContentTemplate>
-                                   </ul>
-                                </li>
-                              </ContentTemplate>
-                          </asp:RoleGroup>
-                      </RoleGroups>
-          </asp:LoginView>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
               <li>
                   <asp:LoginView ID="LoginViewMenu" runat="server">
               <AnonymousTemplate>
                   <a href="/Login">Log in</a>
               </AnonymousTemplate>
               <LoggedInTemplate>
-                 <a><asp:LoginName ID="LoginNameMenu" runat="server" /></a>
+                  <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><asp:LoginName ID="LoginNameMenu" runat="server" /><span class="caret"></span></a>
+                      <ul class="dropdown-menu" role="menu">
+                          <li><a href="/Logout">Log uit</a></li>
+                      </ul>
+                  </li>
+                 
               </LoggedInTemplate>
           </asp:LoginView>
               </li>
