--- a/Pathe/inc/Pathe_user.Master
+++ b/Pathe/inc/Pathe_user.Master
@@ -75,6 +75,7 @@
                   <li class="dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><asp:LoginName ID="LoginNameMenu" runat="server" /><span class="caret"></span></a>
                       <ul class="dropdown-menu" role="menu">
+                          <li><a href="/User/Me">Mijn Profiel</a></li>
                           <li><a href="/Logout">Log uit</a></li>
                       </ul>
                   </li>
