--- a/Pathe/inc/Pathe_user.Master
+++ b/Pathe/inc/Pathe_user.Master
@@ -99,6 +99,9 @@
     <script src="/js/material.min.js"></script>
     <script src="/js/ripples.min.js"></script>
     <script src="/js/holder.min.js"></script>
+    
+    <script src="/js/sweetalert.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="/css/sweetalert.css">
 
     <script type="text/javascript">
     $.material.init();
