Begin implementing unit tests

--- a/Pathe/inc/Pathe_admin.master
+++ b/Pathe/inc/Pathe_admin.master
@@ -59,7 +59,13 @@
                                     <li id="menu_filmAdd"><a href="/Admin/Films/Add">Nieuwe Film</a></li>
                                 </ul>
                                 </li>
-                                <li id="menu_bioscopen"><a href="/Admin/Cinema">Bioscopen</a></li>
+                                <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Bioscopen<span class="caret"></span></a>
+                                <ul class="dropdown-menu" role="menu">
+                                    <li id="menu_cinemas"><a href="/Admin/Cinemas/List">Overzicht</a></li>
+                                    <li id="menu_cinemaAdd"><a href="/Admin/Cinemas/Add">Nieuwe Bioscoop</a></li>
+                                </ul>
+                                </li>
                                 <li id="menu_agenda"><a href="/Admin/Agenda">Bioscoopagenda</a></li>
                             </ContentTemplate>
                         </asp:RoleGroup>
